gitops/manifests/ingress-routes/kagent-basicauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kagent-basic-auth
  namespace: kagent
spec:
  basicAuth:
    secret: kagent-basic-auth
