gitops/manifests/ingress-routes/coder-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder
  namespace: coder
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`code.jamilshaikh.in`)
      kind: Rule
      services:
        - name: coder
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder-tls
  namespace: coder
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`code.jamilshaikh.in`)
      kind: Rule
      services:
        - name: coder
          port: 80
  tls:
    secretName: coder-tls
