gitops/manifests/ingress-routes/grafana-ingressroute.yaml
---
# Grafana IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.lab.jamilshaikh.in`)
      kind: Rule
      services:
        - name: victoria-metrics-grafana
          port: 80
