gitops/manifests/ingress-routes/homarr-ingressroute.yaml
---
# Homarr IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homelab
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homarr.lab.jamilshaikh.in`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
