gitops/manifests/ingress-routes/iqama-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iqama
  namespace: todo-app
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`iqama.space`)
      kind: Rule
      services:
        - name: todo-app
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iqama-tls
  namespace: todo-app
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`iqama.space`)
      kind: Rule
      services:
        - name: todo-app
          port: 80
  tls:
    secretName: iqama-tls
