gitops/manifests/ingress-routes/kagent-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kagent
  namespace: kagent
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kagent.jamilshaikh.in`)
      kind: Rule
      services:
        - name: kagent-ui
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kagent-tls
  namespace: kagent
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kagent.jamilshaikh.in`)
      kind: Rule
      services:
        - name: kagent-ui
          port: 8080
  tls:
    secretName: kagent-tls
