gitops/manifests/ingress-routes/minio-ingressroute.yaml
---
# MinIO Console IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.lab`)
      kind: Rule
      services:
        - name: minio
          port: 9001  # MinIO console port
  tls:
    secretName: minio-tls-cert
