gitops/manifests/ingress-routes/postgres-ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-tcp
  namespace: postgres-operator
spec:
  entryPoints:
    - postgres
  routes:
    - services:
        - name: homelab-pg-primary
          port: 5432
          weight: 1
