gitops/manifests/ingress-routes/routeplane-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: routeplane
  namespace: routeplane
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`routeplane.jamilshaikh.in`)
      kind: Rule
      services:
        - name: routeplane
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: routeplane-tls
  namespace: routeplane
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`routeplane.jamilshaikh.in`)
      kind: Rule
      services:
        - name: routeplane
          port: 80
  tls:
    secretName: routeplane-tls
