gitops/manifests/ingress-routes/teleport-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teleport
  namespace: teleport
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`teleport.jamilshaikh.in`)
      kind: Rule
      services:
        - name: teleport
          port: 443
          scheme: https
          serversTransport: teleport-backend-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teleport-tls
  namespace: teleport
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teleport.jamilshaikh.in`)
      kind: Rule
      services:
        - name: teleport
          port: 443
          scheme: https
          serversTransport: teleport-backend-tls
  tls:
    secretName: teleport-tls
